mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mysql
      http:
        paths:
          - backend:
              service:
                name: ms-payment-quoting
                port:
                  number: 3306
            path: /
            pathType: ImplementationSpecific
